added download page

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,18 +1,21 @@
 {{define "header"}}
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>TFT</title>
-		<link rel="stylesheet" type="text/css"
-		href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700"/>
-		<link rel="stylesheet" type="text/css" href="/static/css/main.css">
-	</head>
+    <head>
+        <title>TFT</title>
+        <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700"/>
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+    </head>
 
-	<body class="cf">
-		<div id="container">
-			<div class="header">
-				T<span id="f">F</span>T
-				<div class="sub">Temporary File Transfer</div>
-			</div>
-    </div>
+    <body class="cf">
+        <div id="wrapper">
+            <header>
+                <div class="container cf">
+                    <h1>TFT</h1>
+                    <h4>Temporary File Transfer</h4>
+                </div>
+            </header>
+        </div>
 {{end}}
