--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 html,
 button,
 input,
@@ -14,7 +18,26 @@ html {
   overflow-y: scroll;
 }
 body {
-  line-height: 1.4;
+  height: 100%;
+}
+header {
+  width: 100%;
+  color: #FFFFFF;
+  background-color:#FF9900;
+  text-align: center;
+  margin-bottom: 30px;
+  height: 250px;
+}
+header h1 {
+  margin-top: 50px;
+  letter-spacing: 0.3em;
+  font: 4.4375em Montserrat;
+  font-weight:700;
+
+}
+header h4 {
+  padding-top: 10px;
+  word-spacing: 0.5em;
 }
 .cf:before,
 .cf:after {
@@ -24,40 +47,46 @@ body {
 .cf:after {
   clear: both;
 }
-.header {
-  font-size: 3em;
-  font-weight:500;
-  color: #363636;
-  line-height: 1.2em;
-  text-align: left;
-  margin-bottom: 30px !important;
+.main .container{
+  padding: 15px 0;
+  text-align: center;
 }
-.header > #f {
-  color: #b35215;
+.main .text-2 {
+  padding: 15px 0;
+  font: 1.3em Oxygen;
+  color: #1F2740;
 }
-.sub {
-  background-color: inherit;
-  color: #363636;
-  font-size: 0.5em;
-  line-height: 1em;
-  letter-spacing: -0.05em;
-  position: absolute;
-  right: 0;
-  width: 100%;
-  border-bottom: 1px solid #f0f0f0;
+.main form {
+  margin-top: 100px;
+  color: #fff;
+  font-size: 1.25em;
 }
 .content {
-
+  padding: 15px 0;
+  border-bottom: 1px solid #c5c5c5;
 }
-.content h1 {
-  text-align: center;
-  color: #d6d6d6;
+.blue {
+  background-color:#84A4BF;
+  min-height: 350px;
+}
+#wrapper {
+  min-width: 100%;
+  height: auto !important;
+  margin: 0 auto -3em;
 }
 #error {
   color: #ff0000;
 }
-#container {
-  width: 100%;
+#pick {
+  border-radius: 0 .5em 0.5em 0;
+  width: 23%;
+  height: 2.375em;
+}
+#upload {}
+.container {
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
 }
 #container > div {
   max-width: 800px;
