--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,22 @@
 {{template "header"}}
 
-<div id="container">
+<div class="main">
 	<div class="content">
-		<h1>Instantly share files.</h1>
-		<div>
+		<div class="container">
+			<h5 class="text-2">Instantly share files.</h5>
+		</div>
+	</div>
+	<div class="blue">
+		<div class="container">
 			<span id="error">{{.Err}}</span> <!-- used to print errors -->
 			<form enctype="multipart/form-data" action="http://127.0.0.1:3000/" method="post">
-	      Choose a file: <input type="file" name="uploadfile" />
-	      <input type="hidden" name="token" value="{{.}}"/>
-	      <input type="submit" value="Upload" />
+	      	Choose a file: <input id="pick" type="file" name="uploadfile" />
+	      	<input type="hidden" name="token" value="{{.}}"/>
+	      	<input id="upload" type="submit" value="Upload" />
 			</form>
 			{{.Success}}
 		</div>
+	</div>
 	</div>
 </div>
 
