--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,10 @@
 {{define "footer"}}
+<footer>
+<div class="container cf">
+	<p>CS4121 Group Programming Language : Go</p>
+	<p>Fall 2015</p>
+</div>
+</footer>
 </body>
 </html>
 {{end}}
