--- a/templates/download.html
+++ b/templates/download.html
@@ -1,10 +1,13 @@
 {{template "header"}}
 
-<div id="container">
-	<div class="content">
-		<h1>Instantly share files.</h1>
+<div class="content">
+	<div id="container">
 		<div>
-			<button><a href="{{.Filename}}">Download File</a></button>
+			{{if .Success}}
+				<button><a href="{{.Info}}">Download File</a></button>
+			{{else}}
+				<span id="error">{{.Info}}</span> <!-- used to print errors -->
+			{{end}}
 		</div>
 	</div>
 </div>
