--- a/templates/header.html
+++ b/templates/header.html
@@ -13,8 +13,8 @@
         <div id="wrapper">
             <header>
                 <div class="container cf">
-                    <h1>TFT</h1>
-                    <h4>Temporary File Transfer</h4>
+                    <h1>TF<span>T</span></h1>
+                    <h4>Temporary <span>File</span> Transfer</h4>
                 </div>
             </header>
         </div>
