--- a/templates/home.html
+++ b/templates/home.html
@@ -3,24 +3,45 @@
 <div class="main">
 	<div class="content">
 		<div class="container">
-			<h5 class="text-2">Instantly share files.</h5>
+			<div class="text-2">Use TFT to instantly share files with your friends. <br>It only takes TWO steps!</div>
 		</div>
 	</div>
 	<div class="blue">
 		<div class="container">
+			<div class="info text-3">1. Begin by uploading a file:</div>
 			<form enctype="multipart/form-data" action="http://127.0.0.1:3000/" method="post">
-	      	Choose a file: <input id="pick" type="file" name="uploadfile" />
-	      	<input type="hidden" name="token" value="{{.}}"/>
-	      	<input id="upload" type="submit" value="Upload" />
-			</form>
+		      	<input id="pick" type="file" name="uploadfile" />
+		      	<input class="btn" id="upload" type="submit" value="Upload" />
+		      	<input type="hidden" name="token" value="{{.}}"/>
+	      	</form>
+	      	<!-- RESULTS - POST UPLOAD -->
 			{{if .Success}}
-				<a href="{{.Info}}">{{.Info}}</a>
+				<div class="success">
+					<div class="info text-4">2. Your upload was successful! We have created a page for your download. <br><br> Go to the download page:</div>
+					<button class="btn"><a href="{{.Info}}">Go to Download Page</a></button>
+					<div class="info text-4">OR <br> copy the URL to your clipboard and send to a friend:</div>
+					<div class="input-group">
+						<!-- Target -->
+						<input type="text" id="link" value="{{.Info}}"/>
+						<!-- Trigger -->
+						<span class="input-group-button">
+							<button class="btn" data-clipboard-target="#link">
+							    <img class="clippy" src="../static/img/clippy.svg" alt="Copy to clipboard" width="13">
+							</button>
+						</span>
+					</div>
+					<div class="info text-4">
+						*NOTE: Your upload will be available for only 30 minutes.
+					</div>
+				</div>
 			{{else}}
 			  <span id="error">{{.Info}}</span> <!-- used to print errors -->
 			{{end}}
 		</div>
 	</div>
 	</div>
+	<script src="../static/js/clipboard.js/dist/clipboard.min.js"></script>
+	<script src="../static/js/main.js" type="text/javascript"></script>
 </div>
 
 {{template "footer"}}
