--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,13 +24,13 @@ body {
 header {
   width: 100%;
   color: #FFFFFF;
-  background-color:#FF9900;
+  background-color: #FF9900;
   text-align: center;
   margin-bottom: 25px;
-  height: 250px;
+  height: 200px;
 }
 header h1 {
-  margin-top: 50px;
+  margin-top: 30px;
   letter-spacing: 0.5em;
   font: 5.4375em Montserrat;
   font-weight:700;
@@ -98,12 +98,15 @@ img {
   color: #1F2740;
 }
 .text-3 {
-  padding: 15px 0;
+  padding: 0;
   font: 1.4em Oxygen;
   color: #FFF;
 }
 .text-4 {
   font: 1em Oxygen;
+}
+.text-3 > span, .text-4 >span {
+  color: #FF9900;
 }
 .info {
   max-width: 50%;
