--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
         <div id="wrapper">
             <header>
                 <div class="container cf">
-                    <h1>TF<span>T</span></h1>
+                    <h1><a href="/">TF<span>T</span></a></h1>
                     <h4>Temporary <span>File</span> Transfer</h4>
                 </div>
             </header>
