--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
 				<div class="success">
 					<div class="info text-4"><span>2.</span> Your upload was successful! We have created a page for your download. <br><br> <span>a.</span> Go to the download page:</div>
 					<button class="btn"><a href="{{.Info}}">Go to Download Page</a></button>
-					<div class="info text-4">OR <br> <span>b.</span> Copy the URL to your clipboard and send to a friend:</div>
+					<div class="info text-4">OR <br> <span>b.</span> Copy the URL to your clipboard<br> and send to a friend:</div>
 					<div class="input-group">
 						<!-- Target -->
 						<input type="text" id="link" value="{{.Info}}"/>
