--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 	<div class="blue">
 		<div class="container">
 			<div class="info text-3"><span>1.</span> Begin by uploading a file:</div>
-			<form enctype="multipart/form-data" action="http://127.0.0.1:3000/" method="post">
+			<form enctype="multipart/form-data" action="http://andreavelosa.com:3000/" method="post">
 		      	<input id="pick" type="file" name="uploadfile" />
 		      	<input class="btn" id="upload" type="submit" value="Upload" />
 		      	<input type="hidden" name="token" value="{{.}}"/>
