--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 	</div>
-	<script src="../static/js/clipboard.js/dist/clipboard.min.js"></script>
+	<script src="../static/js/clipboard.js/clipboard.min.js"></script>
 	<script src="../static/js/main.js" type="text/javascript"></script>
 </div>
 
